# saturn-titan

./: Makefile.am  Makefile.in  README  acinclude.m4  configure  configure.ac  saturn-4.2.desktop  titan-4.2.desktop
Saturn/: AutoColourEdit.cc  AutoColourEdit.h  BailoutColouring.cc  BailoutColouring.h  BailoutCondition.cc  BailoutCondition.h  CalculatingUnit.cc  CalculatingUnitLD.cc  ColourEdit.cc  ColourEdit.h  ColourList.cc  ColourList.h  ColourMap.cc  ColourMapList.cc  ColourMapList.h  ColourMaps.cc  ColourMaps.h  ColourTab.cc  ColourTab.h  ColouringTab.cc  ColouringTab.h  ComplexFunction.cc  ComplexFunction.h  ComplexFunctionParametersContainer.cc  ComplexFunctionParametersContainer.h  ComplexParametersContainer.cc  ComplexParametersContainer.h  ComponentColourEdit.cc  ComponentColourEdit.h  Config.cc  Config.h  ExportColourMap.cc  ExportColourMap.h  Fractal.cc  Fractal.h  FractalConfig.h  FractalDrawing.cc  FractalDrawing.h  FractalList.cc  FractalList.h  (+66 more)
Titan/: CalculatingUnit.h  CalculatingUnitGeneric.h  CalculatingUnitLD.h  CalculatingUnitMP.cc  CalculatingUnitMP.h  ColourMap.h  Colours.cc  Colours.h  FractalConfig.cc  MainWindow.cc  MainWindow.h  OrbitTraps.cc  Picture.cc  Picture.h  StaticCalculatingUnit.cc  StaticCalculatingUnit.h  Summary.cc  Summary.h  Titan.h  Transform.h  Utilities.h  ldcomplex.h  main.cc  resource.qrc
macros/: ax_x86_64_check.m4
manual_and_others/: Element90-ColourMaps.scm  Element90-ColourMaps.ugr
