bin_PROGRAMS = saturn42 titan42
saturn42_SOURCES = Saturn/AutoColourEdit.cc \
                   Saturn/AutoColourEdit.h \
                   Saturn/BailoutColouring.cc \
                   Saturn/BailoutColouring.h \
                   Saturn/BailoutCondition.cc \
                   Saturn/BailoutCondition.h \
                   Saturn/CalculatingUnit.cc \
                   Saturn/CalculatingUnitGeneric.h \
                   Saturn/CalculatingUnit.h \
                   Saturn/CalculatingUnitLD.cc \
                   Saturn/CalculatingUnitLD.h \
                   Saturn/CalculatingUnitMP.cc \
                   Saturn/CalculatingUnitMP.h \
                   Saturn/ColourEdit.cc \
                   Saturn/ColourEdit.h \
                   Saturn/ColouringTab.cc \
                   Saturn/ColouringTab.h \
                   Saturn/ColourList.cc \
                   Saturn/ColourList.h \
                   Saturn/ColourMap.cc \
                   Saturn/ColourMap.h \
                   Saturn/ColourMapList.cc \
                   Saturn/ColourMapList.h \
                   Saturn/ColourMaps.cc \
                   Saturn/ColourMaps.h \
                   Saturn/Colours.cc \
                   Saturn/Colours.h \
                   Saturn/ColourTab.cc \
                   Saturn/ColourTab.h \
                   Saturn/ComplexFunction.cc \
                   Saturn/ComplexFunction.h \
                   Saturn/ComplexFunctionParametersContainer.cc \
                   Saturn/ComplexFunctionParametersContainer.h \
                   Saturn/ComplexParametersContainer.cc \
                   Saturn/ComplexParametersContainer.h \
                   Saturn/ComponentColourEdit.cc \
                   Saturn/ComponentColourEdit.h \
                   Saturn/Config.cc \
                   Saturn/Config.h \
                   Saturn/ExportColourMap.cc \
                   Saturn/ExportColourMap.h \
                   Saturn/Fractal.cc \
                   Saturn/FractalConfig.cc \
                   Saturn/FractalConfig.h \
                   Saturn/FractalDrawing.cc \
                   Saturn/FractalDrawing.h \
                   Saturn/Fractal.h \
                   Saturn/FractalList.cc \
                   Saturn/FractalList.h \
                   Saturn/FractalsConfig.cc \
                   Saturn/FractalsConfig.h \
                   Saturn/FractalSettingsWindow.cc \
                   Saturn/FractalSettingsWindow.h \
                   Saturn/FractalTab.cc \
                   Saturn/FractalTab.h \
                   Saturn/Function.cc \
                   Saturn/Function.h \
                   Saturn/FunctionParametersContainer.cc \
                   Saturn/FunctionParametersContainer.h \
                   Saturn/ImageSize.cc \
                   Saturn/ImageSizeCombo.cc \
                   Saturn/ImageSizeCombo.h \
                   Saturn/ImageSize.h \
                   Saturn/ImageTab.cc \
                   Saturn/ImageTab.h \
                   Saturn/ImportColourMap.cc \
                   Saturn/ImportColourMap.h \
                   Saturn/ImportingTree.cc \
                   Saturn/ImportingTree.h \
                   Saturn/ImportSourceTree.cc \
                   Saturn/ImportSourceTree.h \
                   Saturn/KeyString.cc \
                   Saturn/KeyString.h \
                   Saturn/ldcomplex.h \
                   Saturn/LyapunovColouring.cc \
                   Saturn/LyapunovColouring.h \
                   Saturn/main.cc \
                   Saturn/MainWindow.cc \
                   Saturn/MainWindow.h \
                   Saturn/ManualColourEdit.cc \
                   Saturn/ManualColourEdit.h \
                   Saturn/mpcomplex.h \
                   Saturn/mpreal.h \
                   Saturn/NumberEntry.cc \
                   Saturn/NumberEntry.h \
                   Saturn/OptionComboboxes.cc \
                   Saturn/OptionComboboxes.h \
                   Saturn/OrbitColouring.cc \
                   Saturn/OrbitColouring.h \
                   Saturn/OrbitTraps.cc \
                   Saturn/OrbitTraps.h \
                   Saturn/OuterSelection.cc \
                   Saturn/OuterSelection.h \
                   Saturn/ParametersContainer.cc \
                   Saturn/ParametersContainer.h \
                   Saturn/Saturn.h \
                   Saturn/SingleColour.cc \
                   Saturn/SingleColour.h \
                   Saturn/Splash.cc \
                   Saturn/Splash.h \
                   Saturn/StaticCalculatingUnit.cc \
                   Saturn/StaticCalculatingUnit.h \
                   Saturn/TransformDefinition.cc \
                   Saturn/TransformDefinition.h \
                   Saturn/Transform.h \
                   Saturn/TransformsTab.cc \
                   Saturn/TransformsTab.h \
                   Saturn/TransformTree.cc \
                   Saturn/TransformTree.h \
                   Saturn/Trap.cc \
                   Saturn/TrapConfig.cc \
                   Saturn/TrapConfig.h \
                   Saturn/Trap.h \
                   Saturn/TypesAndConstants.h \
                   Saturn/Utilities.cc \
                   Saturn/Utilities.h \
                   Saturn/WaveDrawing.cc \
                   Saturn/WaveDrawing.h \
                   Saturn/Waveform.cc \
                   Saturn/Waveform.h \
                   Saturn/resources.qrc
nodist_saturn42_SOURCES = Saturn/AutoColourEdit.moc.cpp \
                          Saturn/BailoutColouring.moc.cpp \
                          Saturn/BailoutCondition.moc.cpp \
                          Saturn/CalculatingUnitGeneric.moc.cpp \
                          Saturn/ColourEdit.moc.cpp \
                          Saturn/ColouringTab.moc.cpp \
                          Saturn/ColourList.moc.cpp \
                          Saturn/ColourMapList.moc.cpp \
                          Saturn/ColourMaps.moc.cpp \
                          Saturn/ColourTab.moc.cpp \
                          Saturn/ComplexFunctionParametersContainer.moc.cpp \
                          Saturn/ComplexParametersContainer.moc.cpp \
                          Saturn/ComponentColourEdit.moc.cpp \
                          Saturn/ExportColourMap.moc.cpp \
                          Saturn/Fractal.moc.cpp \
                          Saturn/FractalDrawing.moc.cpp \
                          Saturn/FractalList.moc.cpp \
                          Saturn/FractalSettingsWindow.moc.cpp \
                          Saturn/FractalTab.moc.cpp \
                          Saturn/FunctionParametersContainer.moc.cpp \
                          Saturn/ImageSizeCombo.moc.cpp \
                          Saturn/ImageSize.moc.cpp \
                          Saturn/ImageTab.moc.cpp \
                          Saturn/ImportColourMap.moc.cpp \
                          Saturn/ImportSourceTree.moc.cpp \
                          Saturn/LyapunovColouring.moc.cpp \
                          Saturn/MainWindow.moc.cpp \
                          Saturn/ManualColourEdit.moc.cpp \
                          Saturn/NumberEntry.moc.cpp \
                          Saturn/OptionComboboxes.moc.cpp \
                          Saturn/OrbitColouring.moc.cpp \
                          Saturn/OuterSelection.moc.cpp \
                          Saturn/ParametersContainer.moc.cpp \
                          Saturn/Saturn.moc.cpp \
                          Saturn/SingleColour.moc.cpp \
                          Saturn/Splash.moc.cpp \
                          Saturn/TransformDefinition.moc.cpp \
                          Saturn/TransformsTab.moc.cpp \
                          Saturn/Trap.moc.cpp \
                          Saturn/WaveDrawing.moc.cpp \
                          Saturn/resources.qrc.cpp
titan42_SOURCES = Titan/CalculatingUnit.h \
                  Titan/CalculatingUnit.cc \
                  Titan/CalculatingUnitGeneric.h \
                  Titan/CalculatingUnitLD.h \
                  Titan/CalculatingUnitLD.cc \
                  Titan/CalculatingUnitMP.h \
                  Titan/CalculatingUnitMP.cc \
                  Titan/ColourMap.h \
                  Titan/ColourMap.cc \
                  Titan/Colours.h \
                  Titan/Colours.cc \
                  Titan/ComplexFunction.h \
                  Titan/ComplexFunction.cc \
                  Titan/FractalConfig.h \
                  Titan/FractalConfig.cc \
                  Titan/Function.h \
                  Titan/Function.cc \
                  Titan/KeyString.h \
                  Titan/KeyString.cc \
                  Titan/ldcomplex.h \
                  Titan/main.cc \
                  Titan/MainWindow.h \
                  Titan/MainWindow.cc \
                  Titan/mpcomplex.h \
                  Titan/mpreal.h \
                  Titan/OrbitTraps.h \
                  Titan/OrbitTraps.cc \
                  Titan/Picture.h \
                  Titan/Picture.cc \
                  Titan/StaticCalculatingUnit.h \
                  Titan/StaticCalculatingUnit.cc \
                  Titan/TypesAndConstants.h \
                  Titan/Summary.h \
                  Titan/Summary.cc \
                  Titan/Titan.h \
                  Titan/Transform.h \
                  Titan/Utilities.h \
                  Titan/Utilities.cc \
                  Titan/Waveform.h \
                  Titan/Waveform.cc \
                  Titan/resource.qrc
nodist_titan42_SOURCES = Titan/CalculatingUnitGeneric.moc.cpp \
                         Titan/MainWindow.moc.cpp \
                         Titan/Picture.moc.cpp \
                         Titan/Titan.moc.cpp \
                         Titan/resource.qrc.cpp
saturn42_CXXFLAGS = $(CXXFLAGS) $(QT_CPPFLAGS) -DNOT_MOC
saturn42_LDADD = $(QT_LIBS) $(BOOST_THREAD_LIB) $(BOOST_IOSTREAMS_LIB)  $(BOOST_SYSTEM_LIB) $(GMP_LIB) $(MPFR_LIB)
titan42_CXXFLAGS = $(CXXFLAGS) $(QT_CPPFLAGS) -DBATCH -DNOT_MOC
titan42_LDADD = $(QT_LIBS) $(BOOST_THREAD_LIB) $(BOOST_IOSTREAMS_LIB) $(BOOST_SYSTEM_LIB) $(GMP_LIB) $(MPFR_LIB)
EXTRA_DIST = saturn-4.2.desktop \
             titan-4.2.desktop \
             LICENSE \
             Saturn/images/saturn.icon.png \
             Saturn/images/splash.png \
             Titan/images/titan.icon.png
saturndir = $(datadir)/saturn-titan-4.2
saturn_DATA = Saturn/images/saturn.icon.png \
              Titan/images/titan.icon.png
appdir = $(datadir)/applications
app_DATA = saturn-4.2.desktop \
           titan-4.2.desktop

SUFFIXES = .moc.cpp .qrc .qrc.cpp


.h.moc.cpp:
	$(MOC) $(QT_CPPFLAGS) $< -o $@
.qrc.qrc.cpp:
	$(RCC) -name `echo "$<" | sed 's/\.qrc$$//'` $< -o $@

DISTCLEANFILES = $(nodist_titan42_SOURCES) $(nodist_saturn42_SOURCES)
